--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -34,12 +34,14 @@ right  = 1in]{geometry}
 
 \section*{Experience}
 \textbf{Senior Software Engineer}\\
-\textit{Subtree Inc, June 2018 to present}\\[5pt]
-Instrumental in the pivot from \textit{Dotmesh} to \textit{Dotscience}, a product which brings software engineering and DevOps best practices to data scientists through automation. Worked on all elements of the stack from React frontend on the dashboard to backend work on runners for user workloads.
+\textit{Dotscience/Dotmesh, June 2018 to present}\\[5pt]
+Instrumental in the design and development of Dotscience — a SaaS product to aid the day to day work of Data Scientists. Integrated our complex product with NodeRed, a drag and drop UI provider which allows users to interact with DotScience as if it were an executable flow chart — this allowed non-technical users to get the result of data scientists work on Dotscience without the need for additional training whilst also allowing automatic integrations with other tools suck as Slack. Alongside the behaviour driven development of the system I wrote the user facing documentation and provided training to clients. This increased the size of the market Dotscience could appeal to and directly contributed to sales.
 
-\paragraph{}Main focus as a software engineer was on backend and infrastructure, using Golang to write APIs, Docker, Kubernetes and GCP for deployment. Wrote storage integration to S3 in order to enable customers to bring in data in from other sources. Rewrote prototyped elements of the system from Python to Golang whilst adjusting those elements to new specification requirements. Wrote extensive end to end and integration tests which helped identify complex problems before reaching the customer. 
+\paragraph{}Designed and developed the e2e test suite for the backend of DotScience. Taught colleagues how to integrate existing frontend tests into environment level e2e tests. The development of the test suite reduced the amount of time developers had to spend manually testing the system before accepting a pull request which increased productivity. The suite also reduced the likelihood of a bug being introduced into production. 
 
-\paragraph{}Introduced monitoring using Prometheus and Alertmanager, supported customers using the product and introduced a support rota. Introduced pull requests to increase code quality and maintainability, continuous delivery best practices and wrote pipeline automation code and configuration using Drone and Gitlab CI. Recruited and hired other engineers, and advised on hiring practices.\\[10pt]
+\paragraph{}Wrote the Kubernetes Manifests, which control deployment, for Dotscience and Dotmesh which allowed us to reduce the number of virtual machines required to run the SaaS product whilst also opening us up to a ecosystem of tools which made the maintenance of the SaaS product easier.
+
+\paragraph{}Designed and developed, in go, the committer which detects run metadata whilst another developer built the CLI tool to run a script using Dotscience. These two services had to work with one another so we adhered to contract based development. Development of the committer meant that end users would no longer have to alter the structure of their filesystem of data to match the technical needs of Dotscience which reduced the amount of friction to start using the product.\\[10pt]
 
 \textbf{Platform Engineer}\\
 \textit{Ocado Technology, February 2017 to June 2018}\\[5pt]
@@ -49,7 +51,7 @@ Responsible for the Ocado Technology developer platform, a Kubernetes cluster on
 
 \paragraph{}Key member of the Monitoring and Alerting working group on behalf of my team for the infrastructure department, which aimed to have a more coordinated approach to monitoring across several teams. Lead meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes. Lead internal monitoring hackathons.
 
-\paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Mentored several other members of the team, sometimes answering questions via slack, other times through pairing particularly around operations work. Publicly presented my work at Kubernetes London, Cloud Native London, London Python, Cambridge Python User Group and DevOps Days Edinburgh, in addition to internal training sessions.\\[10pt]
+\paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Mentored several other members of the team through pairing particularly around operations work. Publicly presented my work at Kubernetes London, Cloud Native London, London Python, Cambridge Python User Group and DevOps Days Edinburgh, in addition to internal training sessions.\\[10pt]
 
 \textbf{Software Engineer}\\
 \textit{Cambridge Consultants, September 2015 to February 2017}\\[5pt]
