--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -26,16 +26,46 @@ right  = 1in]{geometry}
    \multicolumn{2}{l}{}\\
    \Huge \color{MyRed}Charlotte Godley \large{BSc(Hons) MBCS MIET} &
 	\begin{tabular}{ll}
-		charlottegodley.co.uk\\
-		me@charlottegodley.co.uk\\
+		https://godley.dev\\
+		charlotte@godley.dev\\
 
 	\end{tabular}
 \end{tabular}
 
 \section*{Experience}
+\textbf{Technical Lead/Engineering Manager}\\
+\textit{Echo, December 2019 to present}\\[5pt]
+Lead team of 4 engineers. Lead backend architecture of split packs, a project which enabled Echo to reduce wastage of unused tablets from packs which are too big to dispense. Trained members of the team on Kubernetes in order to support their understanding of how we use our infrastructure and encouraged senior technical staff to write their own materials on other topics and run their own sessions. Added and improved our run books which all engineers use when they do their day on call fixing stuck patient orders. Lead, developed and deployed the work to connect tape dispensers to the dispatch tool, which saves on packaging resources and saves 3-5 seconds per dispatch.
+
+\paragraph{}Mentored and eventually promoted junior members of the team to senior, where they are now leading projects for themselves and advising on technical direction for the team. Hired and onboarded new team members including designing the onboarding process for our transition to remote during the pandemic.
+
+\paragraph{}Line managed and defined the role for our quality analyst who ensures more complex bugs are followed through and handled. Proposed engineering strategy and ran initiatives which helped keep the strategy going (targeting bugs and technical debt problems) including running "snagging day" which allowed us to tackle minor or snagging problems in the current patient and warehouse flow.\\[10pt]
+
 \textbf{Senior Software Engineer}\\
-\textit{Subtree Inc, June 2018 to present}\\[5pt]
-Designed and built the data science versioning product \textit{Dotscience}, focussing on backend and infrastructure.\\[10pt]
+\textit{Subtree Inc, June 2018 to December 2019}\\[5pt]
+Instrumental in the design and development of Dotscience — a SaaS product to aid the day to day work of
+Data Scientists. Integrated our complex product with NodeRed, a drag and drop UI provider which allows
+users to interact with DotScience as if it were an executable flow chart — this allowed non-technical users to
+get the result of data scientists work on Dotscience without the need for additional training whilst also
+allowing automatic integrations with other tools suck as Slack. Alongside the behaviour driven development
+of the system I wrote the user facing documentation and provided training to clients. This increased the size
+of the market Dotscience could appeal to and directly contributed to sales.
+
+\paragraph{}Designed and developed the e2e test suite for the backend of DotScience. Taught colleagues how to
+integrate existing frontend tests into environment level e2e tests. The development of the test suite reduced
+the amount of time developers had to spend manually testing the system before accepting a pull request
+which increased productivity. The suite also reduced the likelihood of a bug being introduced into
+production.
+
+\paragraph{}Wrote the Kubernetes Manifests, which control deployment, for Dotscience and Dotmesh which allowed
+us to reduce the number of virtual machines required to run the SaaS product whilst also opening us up to a
+ecosystem of tools which made the maintenance of the SaaS product easier.
+
+\paragraph{}Designed and developed, in go, the committer which detects run metadata whilst another developer built
+the CLI tool to run a script using Dotscience. These two services had to work with one another so we
+adhered to contract based development. Development of the committer meant that end users would no
+longer have to alter the structure of their filesystem of data to match the technical needs of Dotscience
+which reduced the amount of friction to start using the product.\\[10pt]
 
 \textbf{Platform Engineer}\\
 \textit{Ocado Technology, February 2017 to June 2018}\\[5pt]
