--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -27,12 +27,23 @@ right  = 1in]{geometry}
    \Huge \color{MyRed}Charlotte Godley \large{BSc(Hons) MBCS MIET} &
 	\begin{tabular}{ll}
 		https://godley.dev\\
-		charlotte@godley.dev\\
+		charlotte@roseanddeer.com\\
 
 	\end{tabular}
 \end{tabular}
 
+\section*{Tech summary}
+\textbf{Python}: 5 years experience. Have worked using pure python, Django, SQLAlchemy, and Flask, generally with a React frontend. TDD using pytest and the standard python testing library.\\
+\textbf{Golang}: 3 years experience. Experience working with gRPC, gorm, protobuf.\\
+\textbf{Databases}: Confident in SQL. Used both google managed postgres and self hosted, SQLite.\\
+\textbf{Infrastructure}: 4 years experience. Have managed and installed Kubernetes clusters on prem and in Google cloud. Set up deployment pipelines using GitLabCI, Python and Bash scripts. Managed and configured GitlabCI runners, both using VMs and using docker containers in Kubernetes. Used and debugged microservices using kubectl.\\
+\textbf{Frontend}: 3 years experience. Worked with React, React Native.
+
 \section*{Experience}
+\textbf{Chief engineer and director}\\
+\textit{Rose and Deer Software Ltd, July 2021 to present}\\[5pt]
+Contract software engineer for multiple clients. Current project: working on a react typescript next-js frontend connecting to a python backend, to implement timed bookings for an events company. Previous project project: sole developer on react-native app for onsite operations in events company, creating simple flows for staff to be able to support customers.\\[10pt] 
+
 \textbf{Technical Lead/Engineering Manager}\\
 \textit{Echo, December 2019 to present}\\[5pt]
 Lead team of 4 engineers. Lead backend architecture of split packs, a project which enabled Echo to reduce wastage of unused tablets from packs which are too big to dispense. Trained members of the team on Kubernetes in order to support their understanding of how we use our infrastructure and encouraged senior technical staff to write their own materials on other topics and run their own sessions. Added and improved our run books which all engineers use when they do their day on call fixing stuck patient orders. Lead, developed and deployed the work to connect tape dispensers to the dispatch tool, which saves on packaging resources and saves 3-5 seconds per dispatch.
