--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -40,12 +40,24 @@ right  = 1in]{geometry}
 \textbf{Frontend}: 3 years experience. Worked with React, React Native.
 
 \section*{Experience}
-\textbf{Chief engineer and director}\\
-\textit{Rose and Deer Software Ltd, July 2021 to present}\\[5pt]
-Contract software engineer for multiple clients. Current project: working on a react typescript next-js frontend connecting to a python backend, to implement timed bookings for an events company. Previous project project: sole developer on react-native app for onsite operations in events company, creating simple flows for staff to be able to support customers.\\[10pt] 
+\textbf{Contractor}\\
+\textit{Client: Ori Industries, August 2022 to December 2022}\\
+\textbf{Tech used: Golang, Kafka, Postgres, gRPC, Typescript, React, Kubernetes}\\[5pt]
+Building out Ori’s prototype cloud deployment software from the ground up. Lead work to refactor and rebuild existing functionality such as the deployment status feature, which provided a simplified view on user workloads within Kubernetes infrastructure. Designed and developed new event based architecture to replace heavily RPC based backend. Provided professional advice and instruction on how to foster and develop an effective engineering culture.\\[10pt]
+
+\textbf{Contractor}\\
+\textit{Client: Attest, January 2022 to July 2022}\\
+\textbf{Tech used: Golang, Kafka, Java}\\[5pt]
+Working to mature Attest’s audience infrastructure. Suggested best practices for working with event based architectures, reduced dependencies between microservices and monoliths.\\[10pt]
+
+\textbf{Contractor}\\
+\textit{Client: Pollen, July 2021 to January 2022}\\
+\textbf{Tech used: Python, Django, GraphQL, Typescript, React, Next.js, React Native}\\[5pt]
+working to implement timed bookings for an events company using nextjs, react, typescript and communicating via a graphql/python (Django) backend. Sole developer on react-native app for onsite operations, creating simple flows for staff to be able to support customers. Understood and augmented complex Django models. Contributed to move to domain driven design.\\[10pt]
 
 \textbf{Technical Lead/Engineering Manager}\\
-\textit{Echo, December 2019 to present}\\[5pt]
+\textit{Echo, December 2019 to present}\\
+\textbf{Tech used: Golang, GRPC, GCP, Protobuf, Typescript, React}\\[5pt]
 Lead team of 4 engineers. Lead backend architecture of split packs, a project which enabled Echo to reduce wastage of unused tablets from packs which are too big to dispense. Trained members of the team on Kubernetes in order to support their understanding of how we use our infrastructure and encouraged senior technical staff to write their own materials on other topics and run their own sessions. Added and improved our run books which all engineers use when they do their day on call fixing stuck patient orders. Lead, developed and deployed the work to connect tape dispensers to the dispatch tool, which saves on packaging resources and saves 3-5 seconds per dispatch.
 
 \paragraph{}Mentored and eventually promoted junior members of the team to senior, where they are now leading projects for themselves and advising on technical direction for the team. Hired and onboarded new team members including designing the onboarding process for our transition to remote during the pandemic.
@@ -53,7 +65,8 @@ Lead team of 4 engineers. Lead backend architecture of split packs, a project wh
 \paragraph{}Line managed and defined the role for our quality analyst who ensures more complex bugs are followed through and handled. Proposed engineering strategy and ran initiatives which helped keep the strategy going (targeting bugs and technical debt problems) including running "snagging day" which allowed us to tackle minor or snagging problems in the current patient and warehouse flow.\\[10pt]
 
 \textbf{Senior Software Engineer}\\
-\textit{Dotscience/Dotmesh, June 2018 to December 2019}\\[5pt]
+\textit{Dotscience/Dotmesh, June 2018 to December 2019}\\
+\textbf{Tech used: Golang, GRPC, GCP, Kubernetes, Jupyter notebooks, NodeRed}[5pt]
 Instrumental in the design and development of Dotscience — a SaaS product to aid the day to day work of Data Scientists. Integrated our complex product with NodeRed, a drag and drop UI provider which allows users to interact with DotScience as if it were an executable flow chart — this allowed non-technical users to get the result of data scientists work on Dotscience without the need for additional training whilst also allowing automatic integrations with other tools suck as Slack. Alongside the behaviour driven development of the system I wrote the user facing documentation and provided training to clients. This increased the size of the market Dotscience could appeal to and directly contributed to sales.
 
 \paragraph{}Designed and developed the e2e test suite for the backend of DotScience. Taught colleagues how to integrate existing frontend tests into environment level e2e tests. The development of the test suite reduced the amount of time developers had to spend manually testing the system before accepting a pull request which increased productivity. The suite also reduced the likelihood of a bug being introduced into production. 
@@ -63,7 +76,8 @@ Instrumental in the design and development of Dotscience — a SaaS product to a
 \paragraph{}Designed and developed, in go, the committer which detects run metadata whilst another developer built the CLI tool to run a script using Dotscience. These two services had to work with one another so we adhered to contract based development. Development of the committer meant that end users would no longer have to alter the structure of their filesystem of data to match the technical needs of Dotscience which reduced the amount of friction to start using the product.\\[10pt]
 
 \textbf{Platform Engineer}\\
-\textit{Ocado Technology, February 2017 to June 2018}\\[5pt]
+\textit{Ocado Technology, February 2017 to June 2018}\\
+\textbf{Tech used: Python, Flask, Kubernetes, Docker, GitlabCI, AWS, OpenStack}\\[5pt]
 Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and improving continuous integration and delivery scripts. Implemented and evangelised a test driven approach to deployment process scripts to speed up feedback loops, therefore improving developer productivity. Wrote clear and concise documentation. "Ate own dog food" by using the CI/CD pipelines during development of Django/Python applications.
 
 \paragraph{}Operational duties included supporting developers in debugging issues with their applications on the Kubernetes clusters. Promoted a culture of learning within my team through written case studies which clearly showed the thinking behind the resolution, and through pairing during incidents. Started additional training initiatives within my department through info-dump sessions where we discussed a specific technical topic in a question and answer format.
@@ -73,7 +87,8 @@ Responsible for the Ocado Technology developer platform, a Kubernetes cluster on
 \paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Mentored several other members of the team through pairing particularly around operations work. Publicly presented my work at Kubernetes London, Cloud Native London, London Python, Cambridge Python User Group and DevOps Days Edinburgh, in addition to internal training sessions.\\[10pt]
 
 \textbf{Software Engineer}\\
-\textit{Cambridge Consultants, September 2015 to February 2017}\\[5pt]
+\textit{Cambridge Consultants, September 2015 to February 2017}\\
+\textbf{Tech used: D3, Nodejs, Angular, C, C++}\\[5pt]
 Cambridge Consultants are a product development and technological consultancy. Worked on multidisciplinary teams with projects ranging from household devices through to defence systems primarily in embedded and web systems. One such project was a HTML5 web app for a touch interface to showcase Cambridge Consultants' capabilities to prospective clients. Angular.js was the client-side MVC framework and D3.js was used to display graphs and charts with a Node.js backend. The integration of D3 and Angular was a particularly interesting piece of work, which required working with legacy D3 code written for an earlier iteration of the product in order to get it to play nice with Angular. As well as being shown to clients the application is displayed in the main office, so all visitors see the project.
 
 \paragraph{}Embedded work ranged from developing robust and resilient drivers through to programming state machines and applications for real time operating systems. Took on additional responsibilities around project management including soliciting requirements from clients, delegation of engineering tasks and facilitating collaboration with other teams.\\[10pt]
