--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -33,36 +33,34 @@ right  = 1in]{geometry}
 \end{tabular}
 
 \section*{Tech summary}
-\textbf{Python}: 5 years experience. Have worked using pure python, Django, SQLAlchemy, and Flask, generally with a React frontend. TDD using pytest and the standard python testing library.\\
-\textbf{Golang}: 3 years experience. Experience working with gRPC, gorm, protobuf.\\
+\textbf{Python}: 6 years experience. Have worked using pure python, Django, FastAPI, SQLAlchemy, and Flask, generally with a React frontend. TDD using pytest and the standard python testing library.\\
+\textbf{Golang}: 5 years experience. Experience working with gRPC, gorm, protobuf.\\
+\textbf{Data Science}: Airflow, Pandas, Polars, Jupyter notebooks.\\
 \textbf{Databases}: Confident in SQL. Used both google managed postgres and self hosted, SQLite.\\
-\textbf{Infrastructure}: 4 years experience. Have managed and installed Kubernetes clusters on prem and in Google cloud. Set up deployment pipelines using GitLabCI, Python and Bash scripts. Managed and configured GitlabCI runners, both using VMs and using docker containers in Kubernetes. Used and debugged microservices using kubectl.\\
-\textbf{Frontend}: 3 years experience. Worked with React, React Native.
+\textbf{CI/CD}: GitlabCI, GitHub Actions, Bazel.\\
+\textbf{Infrastructure}: 4 years experience. Have managed and installed Kubernetes clusters on prem and in Google cloud. Set up deployment pipelines using GitLabCI, Python and Bash scripts. Managed and configured GitlabCI runners, both using VMs and using docker containers in Kubernetes. Used and debugged microservices using kubectl. Deployed Infrastructure as Code using Terraform.\\
+\textbf{Frontend}: 3 years experience. Worked with React, React Native.\\[10pt]
 
 \section*{Experience}
 \textbf{Contractor}\\
-\textit{Client: Ori Industries, August 2022 to December 2022}\\
-\textbf{Tech used: Golang, Kafka, Postgres, gRPC, Typescript, React, Kubernetes}\\[5pt]
-Building out Ori’s prototype cloud deployment software from the ground up. Lead work to refactor and rebuild existing functionality such as the deployment status feature, which provided a simplified view on user workloads within Kubernetes infrastructure. Designed and developed new event based architecture to replace heavily RPC based backend. Provided professional advice and instruction on how to foster and develop an effective engineering culture.\\[10pt]
-
-\textbf{Contractor}\\
-\textit{Client: Attest, January 2022 to July 2022}\\
-\textbf{Tech used: Golang, Kafka, Java}\\[5pt]
-Working to mature Attest’s audience infrastructure. Suggested best practices for working with event based architectures, reduced dependencies between microservices and monoliths.\\[10pt]
-
-\textbf{Contractor}\\
-\textit{Client: Pollen, July 2021 to January 2022}\\
-\textbf{Tech used: Python, Django, GraphQL, Typescript, React, Next.js, React Native}\\[5pt]
-working to implement timed bookings for an events company using nextjs, react, typescript and communicating via a graphql/python (Django) backend. Sole developer on react-native app for onsite operations, creating simple flows for staff to be able to support customers. Understood and augmented complex Django models. Contributed to move to domain driven design.\\[10pt]
+\textit{Multiple clients, July 2021 to present}\\
+\textbf{Tech used: Golang, Python, gRPC, protobuf, React Native, React, Polars, Pandas, Airflow}\\[5pt]
+Founded my own business to provide services across all areas of the stack, including:
+\begin{itemize}
+	\item Rebuilding a data processing pipeline from the ground up using python, polars, airflow, terraform and google cloud composer for a financial services company processing transaction data
+	\item Architecting and developing event driven microservices built from the ground up in go and utilizing kafka which provided detailed feedback on customer’s clusters for a cloud deployment product.
+	\item Productionising a prototype data science python CLI into a Flask API for National Grid.
+	\item Maintaining and extending a python django graphql backend with multiple complex models for an events company. Supporting and advising said client with the move to domain driven design.
+	\item Building a decentralised banking platform using AWS lambda, golang and EventBus for a bank
+	\item Building a google drive migrator backend in go to support a media company managing multiple google drive reports
+	\item Building a command line tool to migrate customer data from one customer services tool to the client’s new tool, built in go.
+\end{itemize}\\[10pt]
 
 \textbf{Technical Lead/Engineering Manager}\\
 \textit{Echo, December 2019 to present}\\
 \textbf{Tech used: Golang, GRPC, GCP, Protobuf, Typescript, React}\\[5pt]
 Lead team of 4 engineers. Lead backend architecture of split packs, a project which enabled Echo to reduce wastage of unused tablets from packs which are too big to dispense. Trained members of the team on Kubernetes in order to support their understanding of how we use our infrastructure and encouraged senior technical staff to write their own materials on other topics and run their own sessions. Added and improved our run books which all engineers use when they do their day on call fixing stuck patient orders. Lead, developed and deployed the work to connect tape dispensers to the dispatch tool, which saves on packaging resources and saves 3-5 seconds per dispatch.
-
-\paragraph{}Mentored and eventually promoted junior members of the team to senior, where they are now leading projects for themselves and advising on technical direction for the team. Hired and onboarded new team members including designing the onboarding process for our transition to remote during the pandemic.
-
-\paragraph{}Line managed and defined the role for our quality analyst who ensures more complex bugs are followed through and handled. Proposed engineering strategy and ran initiatives which helped keep the strategy going (targeting bugs and technical debt problems) including running "snagging day" which allowed us to tackle minor or snagging problems in the current patient and warehouse flow.\\[10pt]
+\\[10pt]
 
 \textbf{Senior Software Engineer}\\
 \textit{Dotscience/Dotmesh, June 2018 to December 2019}\\
